--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
 ckiptagger==0.2.1
 gdown==5.1.0
 gensim==4.3.3
+thinc==8.2.2
+spacy==3.7.2
 huggingface-hub==0.25.1
 jieba==0.42.1
 jupyter==1.1.1
 keras==2.15.0
 matplotlib==3.8.2
 nltk==3.8.1
-numpy==1.24.3
+numpy==1.26.4
 pandas==2.2.2
 pyLDAvis==3.4.1
 scikit-learn==1.4.0
@@ -23,5 +25,16 @@ wordcloud==1.9.3
 ckip_transformers==0.2.1
 regex
 tqdm
+plotly
+cohere
+bertopic
+hdbscan
+langchain_community
+langchain_chroma
+grandalf
+langchain_huggingface
+pypdf
+sentence-transformers
+langchain-ollama
 git+https://github.com/Text-Analytics-and-Retrieval/GuidedLDA.git#egg=GuidedLDA
 git+https://github.com/trinker/sentimentpy
